FEAT | inventory moves to Redis; PostgreSQL becomes the ledger
The hot path stops being a row-locked UPDATE on tier_inventory. Redis holds the
live count; PostgreSQL holds the record of what was sold and held, and
tier_inventory becomes a last-known-good copy that only pre-warm and rebuild
write.

One rule orders everything here: Redis cannot roll back, so every mutation sits
OUTSIDE the SQL transaction and every failure mode fails toward under-counting
rather than overbooking. Invisible seats are lost revenue that a rebuild
recovers; phantom seats are an oversell that nothing does.

That rule moves two things:

  - The reserve now runs before the hold row is written instead of inside the
    same transaction, so the free rollback is gone and a constraint rejection
    is compensated explicitly. Only a constraint rejection: a flush violation
    is a definite rollback, while a failure at commit is ambiguous and giving
    back seats that may still be held would be the oversell we are avoiding.
    A buyer double-clicking is the ordinary way to reach this path.

  - Restoration moves to AFTER_COMMIT, via the settle event that already
    existed. sweepExpired settles up to 500 holds in one transaction, so an
    inline increment would return every earlier hold's seats and then let a
    failure put those holds back to ACTIVE -- on sale and still held at once.

tryReserve returns a three-way result instead of a boolean, which deletes the
second getRemaining round trip it used to need to tell a fault from a sell-out.
That lookup also raced: a restore landing between the two calls turned "we
cannot read our inventory" into "this tier is gone".

StockEpoch covers the one failure no ordering can prevent. AOF is
appendfsync everysec, so a restart replays to about a second ago and the
counters come back HIGH while the hold rows they paid for remain. Selling from
them oversells, so an event whose counters may have rolled back refuses holds
until it is rebuilt -- which is wha